--- a/example2_absolue_calc.html
+++ b/example2_absolue_calc.html
@@ -3,15 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title><title>父元素固定宽高</title>
-</title>
+  <title>父元素固定宽高</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
 </head>
 <body>
-  <div class="example2 box_absolute_transform">
+  <div class="example2 box_absolute_calc">
     <div>
-      absolue + transform
+      absolute + calc
     </div>
   </div>
 </body>
