--- a/index.html
+++ b/index.html
@@ -9,23 +9,6 @@
     <h2>水平垂直居中</h2>
     <div class="content example1">
       <h3>父元素是整个页面</h3>
-      <ul>
-        <li>
-          <a href="">lineHeight</a>
-        </li>
-        <li>
-          <a href="">absolute + margin auto</a>
-        </li>
-        <li>
-          <a href="">absolute + 负 margin</a>
-        </li>
-        <li>
-          <a href="">absolute + transform</a>
-        </li>
-        <li>
-          <a href="">flex</a>
-        </li>
-      </ul>
     </div>
 
     <div class="content">
@@ -41,12 +24,25 @@
           <a href="./example2_absolute_margin.html">absolute + margin auto</a>
         </li>
         <li>
-          <a href="./example2_absolute_transform">absolute + transform</a>
+          <a href="./example2_absolute_transform.html">absolute + transform</a>
         </li>
         <li>
-          <a href="">flex</a>
+          <a href="./example2_absolue_calc.html">absolute + calc</a>
+        </li>
+        <li>
+          <a href="./example2_flex.html">flex</a>
+        </li>
+        <li>
+          <a href="./example2_table.html">table</a>
+        </li>
+        <li>
+          <a href="./example2_grid.html">grid</a>
         </li>
       </ul>
+    </div>
+
+    <div class="content">
+      <h3>父元素不固定宽高</h3>
     </div>
   </body>
 </html>
