--- a/example2/example2_absolute_transform.html
+++ b/example2/example2_absolute_transform.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>父元素固定宽高</title>
+  <title><title>父元素固定宽高</title>
+</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./example2.css" />
 </head>
 <body>
-  <div class="example2 box_absolute_calc">
+  <div class="example2 box_absolute_transform">
     <div>
-      absolute + calc
+      absolue + transform
     </div>
   </div>
 </body>
