--- a/index.html
+++ b/index.html
@@ -3,46 +3,50 @@
   <head>
     <meta charset="utf-8" />
     <title>水平垂直居中</title>
-    <link href="./index.css" rel="stylesheet">
+    <link href="./example1/example1.css" rel="stylesheet">
+    <link href="./example2/example2.css" rel="stylesheet">
   </head>
   <body>
     <h2>水平垂直居中</h2>
     <div class="content example1">
       <h3>父元素是整个页面</h3>
+      <ul>
+        <li><a href="./example1/example1_absolute_transform.html">absolute + transform</a></li>
+      </ul>
     </div>
 
     <div class="content">
       <h3>父元素固定宽高</h3>
       <ul>
         <li>
-          <a href="./example2_lineHeight.html">lineHeight</a>
+          <a href="./example2/example2_lineHeight.html">lineHeight</a>
         </li>
         <li>
-          <a href="./example2_absolute.html">absolute + 负 margin</a>
+          <a href="./example2/example2_absolute.html">absolute + 负 margin</a>
         </li>
         <li>
-          <a href="./example2_absolute_margin.html">absolute + margin auto</a>
+          <a href="./example2/example2_absolute_margin.html">absolute + margin auto</a>
         </li>
         <li>
-          <a href="./example2_absolute_transform.html">absolute + transform</a>
+          <a href="./example2/example2_absolute_transform.html">absolute + transform</a>
         </li>
         <li>
-          <a href="./example2_absolue_calc.html">absolute + calc</a>
+          <a href="./example2/example2_absolue_calc.html">absolute + calc</a>
         </li>
         <li>
-          <a href="./example2_flex.html">flex</a>
+          <a href="./example2/example2_flex.html">flex</a>
         </li>
         <li>
-          <a href="./example2_table.html">table</a>
+          <a href="./example2/example2_table.html">table</a>
         </li>
         <li>
-          <a href="./example2_grid.html">grid</a>
+          <a href="./example2/example2_grid.html">grid</a>
         </li>
       </ul>
     </div>
 
     <div class="content">
-      <h3>父元素不固定宽高</h3>
+      <h3>不固定宽高</h3>
     </div>
   </body>
 </html>
