--- a/example1/example1_absolute_transform.html
+++ b/example1/example1_absolute_transform.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>父元素固定宽高</title>
+  <title>父元素是整个页面</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="./index.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="./example1.css" />
 </head>
-
 <body>
-  <div class="example2 box_absolute">
+  <div class="example1 box_absolute_transform">
     <div>
-      absolute + 负margin
+       absolute + transform
     </div>
   </div>
 </body>
-
 </html>
