--- a/example2/example2_absolute.html
+++ b/example2/example2_absolute.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>父元素固定宽高</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="./index.css">
+  <link rel="stylesheet" type="text/css" media="screen" href="./example2.css">
 </head>
+
 <body>
-  <div class="example2 box_lineheight">
+  <div class="example2 box_absolute">
     <div>
-      lineHeight
+      absolute + 负margin
     </div>
   </div>
 </body>
+
 </html>
