--- a/example2/example2_flex.html
+++ b/example2/example2_flex.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>父元素固定宽高</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./example2.css" />
 </head>
 <body>
   <div class="example2 box_flex">
